- [Added contrast correction](https://webdesign.tutsplus.com/articles/css-tips-for-better-color-and-contrast-accessibility--cms-34472) - Added Extra Keyboard shortcuts - Fixed an issue where channels without channel points would reload infinitely

--- a/ttv-tools/settings.css
+++ b/ttv-tools/settings.css
@@ -1180,13 +1180,13 @@ input[type="date"i]:not(:valid)::-webkit-calendar-picker-indicator, input[type="
     overflow: auto;
 }
 
-:is(#filter_rules, #phrase_rules, #away_mode_schedule) :is(h1, h2, h3, h4, h5, h6):only-child,
-:is(#filter_rules, #phrase_rules, #away_mode_schedule) :not([not-empty]):is([filter-type], [day-of-week]),
-:is(#filter_rules, #phrase_rules, #away_mode_schedule) [not-empty]:is([filter-type], [day-of-week]) ~ *:last-child {
+/* :is(#filter_rules, #phrase_rules, #away_mode_schedule) :is(h1, h2, h3, h4, h5, h6):only-child, */
+:is(#filter_rules, #phrase_rules, #away_mode_schedule) :is([filter-type], [phrase-type], [day-of-week]):not([not-empty]),
+:is(#filter_rules, #phrase_rules, #away_mode_schedule) [not-empty]:is([filter-type], [phrase-type], [day-of-week]) ~ *:last-child {
     display: none;
 }
 
-:is(#filter_rules, #phrase_rules, #away_mode_schedule) :is([filter-type], [day-of-week])[not-empty] ~ [hr] {
+:is(#filter_rules, #phrase_rules, #away_mode_schedule) :is([filter-type], [phrase-type], [day-of-week])[not-empty] ~ [hr] {
     border-top: 1px solid var(--white-faded);
 }
 
